[package]
name = "mb2-wukong-expansion"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0"
nrf52833-hal = { version = "0.18.0", default-features = false, features = ["rt"] }

[dev-dependencies]
microbit-v2 = "0.15"
panic-probe = "0.3.2"

[dev-dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
