[package]
name = "mb2-wukong-expansion"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0"

[dependencies.nrf52833-hal]
version = "0.18.0"
default-features = false
features = ["rt"]

[dev-dependencies]
cortex-m-rt = "0.7"
# microbit-v2 = "0.15"
microbit-v2 = {version = "0.15", path = "/local/src/old/microbit/microbit-v2"}
panic-probe = "0.3.2"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"

[dev-dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
