[package]
name = "mb2-wukong-expansion"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-dma = "0.2.0"
embedded-hal = "1.0"
libm = "0.2.8"
smart-leds = "0.4.0"
smart-leds-trait = "0.3.0"

[dependencies.ws2812-nrf52833-pwm]
version = "0.2.0"
git = "http://github.com/BartMassey/ws2812-nrf52833-pwm"

[dependencies.nrf52833-hal]
version = "0.18.0"
default-features = false
features = ["rt"]

[dev-dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.15.1"
panic-probe = "0.3.2"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"

[dev-dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
